# school

./: README.md
Embedded/ChaseRover/firmware/src/: coordinator.c  coordinator.h  coordinator_public.c  coordinator_public.h  coordinator_timer1.c  coordinator_timer1.h  debug.c  debug.h  message.c  message.h  message_public.c  message_public.h  monitor.c  monitor.h  monitor_public.c  monitor_public.h  motor.c  motor.h  motor_public.c  motor_public.h  motor_timer.c  (+7 more)
Micro/feneley_michael_HW3/: main.c
Micro/feneley_michael_HW4/: main.c
Micro/feneley_michael_HW5/: hw5_problem1b.c  hw5_problem2.c
Micro/feneley_michael_Lab02/: main.c
Micro/feneley_michael_Lab03/: ValueAdded.docx
Micro/feneley_michael_Lab03/feneley_Lab03.X/: main.c
Micro/feneley_michael_Lab04/feneley_Lab04.X/: OledChar.c  OledChar.h  PmodOLED.c  TIME.c  TIME.h  main.c
Micro/feneley_michael_Lab1/: main.c
SoftwareEngineering/feneley_project4/: CMakeLists.txt  TennisController.cpp  TennisView.cpp  TennisView.h  main.cpp
SoftwareEngineering/feneley_project4_part1/: Constants.h  TennisController.cpp  TennisController.h  TennisModel.cpp  TennisModel.h  Window.cpp  Window.h
Systems/esh-spring-2015.git/src/: Makefile  README  esh-utils.c  esh.c  esh.h  helper.c  helper.h  job-manager.c  job-manager.h  plugins.c  plugins.h  plugins.tst  run
Systems/malloclab.git/: tree.3  tree.h
Systems/project-4-sysstatd-web-service.git/: Makefile  README.txt  app_help.c  app_help.h  csapp.c  csapp.h  ip_help.h  server.c  server_unit_test.py
Systems/project-4-sysstatd-web-service.git/files/: index.html
(+65 files in other folders)
